--- a/app.html
+++ b/app.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <main></main>
+    <index></index>
     <script src="app.min.js"></script>
   </body>
 </html>
